package com.panda.structor.proxy;

public interface People {
    Object doWhat();
}
